terraform/vpc.tf
resource "aws_vpc" "devops" {
  cidr_block           = "10.0.0.0/16"
  instance_tenancy     = "default"
  enable_dns_support   = "true"
  enable_dns_hostnames = "true"

  tags = {
    Name    = "devops-pvc"
    Project = "devops"
  }
}

resource "aws_subnet" "devops-pub-1" {
  vpc_id                  = aws_vpc.devops.id
  cidr_block              = "10.0.1.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = var.ZONE1
  tags = {
    Name = "devops-pub-1"
  }

}

resource "aws_subnet" "devops-priv-1" {
  vpc_id                  = aws_vpc.devops.id
  cidr_block              = "10.0.2.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = var.ZONE1
  tags = {
    Name = "devops-priv-1"
  }
}

resource "aws_subnet" "devops-pub-2" {
  vpc_id                  = aws_vpc.devops.id
  cidr_block              = "10.0.3.0/24"
  map_public_ip_on_launch = "true"
  availability_zone       = var.ZONE2
  tags = {
    Name = "devops-pub-2"
  }

}

resource "aws_subnet" "devops-priv-2" {
  vpc_id                  = aws_vpc.devops.id
  cidr_block              = "10.0.4.0/24"
  map_public_ip_on_launch = "false"
  availability_zone       = var.ZONE2
  tags = {
    Name = "devops-priv-2"
  }
}

resource "aws_internet_gateway" "devops-IGW" {
  vpc_id = aws_vpc.devops.id
  tags = {
    Name = "devops-IGW"
  }
}

resource "aws_route_table" "devops-pub-RT" {
  vpc_id = aws_vpc.devops.id

  route {
    cidr_block = "0.0.0.0/0"
    gateway_id = aws_internet_gateway.devops-IGW.id
  }

  tags = {
    Name = "devops-pub-RT"
  }
}

resource "aws_route_table_association" "devops-pub-1-a" {
  subnet_id      = aws_subnet.devops-pub-1.id
  route_table_id = aws_route_table.devops-pub-RT.id
}

resource "aws_route_table_association" "devops-pub-2-a" {
  subnet_id      = aws_subnet.devops-pub-2.id
  route_table_id = aws_route_table.devops-pub-RT.id
}
